--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=your_server;Database=your_database;User Id=your_user;Password=your_password;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Tootaja;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
