Vigased Autorizega. Arvan et saan proovida teha fronted osa.

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Tootaja;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "Jwt": {
+    "Issuer": "local-api",
+    "Audience": "local-users",
+    "Key": "SuperMegaSecretKeyJou521234567890",
+    "ExpiryInMinutes": "360"
+  },
   "AllowedHosts": "*"
 }
