--- a/API_XML-XSLT.csproj
+++ b/API_XML-XSLT.csproj
@@ -20,6 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.2.1" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.2.1" />
     <PackageReference Include="NodaTime" Version="3.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.0.0" />
